--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+      <title>Grade 8 Topic Help</title>
+      <link rel="icon" type="image/x-icon" href="https://i.imgur.com/nf71qLb.png">
+   </head>
+
 <table style="margin:0 0 10px 0; width:244px; background:#fff; border:1px solid #F3F3F3;" cellspacing="0" cellpadding="0">
 <tr><td style="font-family:verdana; font-size:11px; color:#000; padding:5px 5px;"><iframe allowfullscreen="true" webkitallowfullscreen="true" 
 mozallowfullscreen="true" style="width:968px;height:561px;" src="https://game316009.konggames.com/gamez/0031/6009/live/index.html" width="968px" height="561px" 
